cambio usuario modelo

--- a/FULLPOS_BACKEND/.env.example
+++ b/FULLPOS_BACKEND/.env.example
@@ -2,7 +2,8 @@ NODE_ENV=development
 PORT=4000
 
 # Base de datos
-DATABASE_URL=postgres://USER:PASS@HOST:5432/DB_NAME
+# Ejemplo (ajusta USER/PASS):
+DATABASE_URL=postgres://USER:PASS@fullpos-backend_postgres-db:5432/fullpos_owner_backend?sslmode=disable
 
 # Auth
 JWT_ACCESS_SECRET=Ayleenyahairapapai102604
@@ -16,7 +17,7 @@ OVERRIDE_API_KEY=change-me-override-key
 ALLOW_PUBLIC_CLOUD=false
 VIRTUAL_TOKEN_MASTER_KEY=Ayleenyahairapapai102604
 UPLOADS_DIR=/app/uploads
-PUBLIC_BASE_URL=https://fullpos-proyecto-producion-fullpos-bakend.gcdndd.easypanel.host
+PUBLIC_BASE_URL=https://fullpos-backend-fullpos-backend.onqyr1.easypanel.host
 MAX_PRODUCT_IMAGES_PER_COMPANY=200
 MAX_UPLOAD_IMAGE_MB=5
 MAX_IMAGE_WIDTH=1600
